--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -16,7 +16,7 @@
             <% end %>
           </span>
         </h1>
-        <%= link_to  "Get Started", signup_path, class: "textbox-btn" if !logged_in? %>
+        <%= link_to  "Get Started", login_path, class: "textbox-btn" if !logged_in? %>
       </div>
       <div class="articles-textbox-image">
         <%= image_tag  "celebrate-celebration-communication-296878.jpg" %>
