--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -70,7 +70,6 @@
       color: $color-white;
       align-self: center;
       margin: 0 16px;
-      // margin: 0 32px;
       padding: 5px 7px;
       cursor: pointer;
     }
@@ -83,7 +82,6 @@
   .dashboard-tab {
     grid-row: 4/5;
     margin: 40px 0;
-    // margin: 40px 160px;
     display: flex;
     flex: 1;
     justify-content: center;
@@ -202,11 +200,16 @@
       .profile-info {
         @include style-listings-grid(120px 320px, 0px);
         align-items: center;
+        text-align: left;
 
         .profile-info__image {
           .img-circle {
             height: 120px;
           }
+        }
+
+        &__content {
+          margin-left: 16px;
         }
       }
     }
