--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,3 @@
-<%= render 'shared/errors', obj: @user %>
-
 <div>
   <%= form_for(@user, :html => {class: "form-horizontal", role: "form"}) do |f| %>
     <div class="form-group">
@@ -14,13 +12,15 @@
         <%= f.email_field :email, class: "form-control", placeholder: "Email Address" %>
       </div>
     </div>
-    
-    <div class="form-group">
-      <div class="col-sm-6">
-        <span class="fas fa-lock"></span>
-        <%= f.password_field :password, class: "form-control", placeholder: "Password" %>
+
+    <% if current_page?(signup_path) %>
+      <div class="form-group">
+        <div class="col-sm-6">
+          <span class="fas fa-lock"></span>
+          <%= f.password_field :password, class: "form-control", placeholder: "Password" %>
+        </div>
       </div>
-    </div>
+    <% end %>
 
     <% unless current_page?(signup_path) %>
       <div class="form-group">
