--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,9 @@
             <% if current_user == @user %>
               <span class="profile-info__action edit-btn" type="button">Edit Profile</span>
             <% else %>
-              <a href="#" class="profile-info__action" type="button">Follow</a>
+              <%  if logged_in? %>
+                <a href="#" class="profile-info__action" type="button">Follow</a>
+              <% end %>
               <%  if logged_in? && current_user.admin? %>
                 <%= link_to  "Delete", user_path(@user), method: :delete,
                     data: {confirm: "Are you sure you want to delete?"}, 
