- refactor user controller - write controller tests

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -16,6 +16,13 @@
   font-size: 24px;
 }
 
+.alert {
+  position: absolute;
+  top: 80px;
+  right: 36px;
+  width: 30%;
+}
+
 .navbar-default {
   position: absolute;
   background-color: transparent;
