- create an id for delete element in the show users file - write tests for users controller

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
               <%  if logged_in? && current_user.admin? %>
                 <%= link_to  "Delete", user_path(@user), method: :delete,
                     data: {confirm: "Are you sure you want to delete?"}, 
-                    class: "profile-info__action" , type: "button" %>
+                    class: "profile-info__action" , id: "delete-btn", type: "button" %>
               <% end %>
             <% end %>
           </div>
